2001-12-02  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/templating/UrlBuilder.py (image): the <:img:>
	tag will now determine the width and height of the image if the url
	is local and PIL (Python Imaging Library) is installed, and neither
	height and width attributes have been specified in the tag.

	* pylibs/AE/Cache.py (_openDocRoot): added method that returns 
	an open file object.

2001-11-18  Jacob Smullyan  <smulloni@skunk.org>

	* skunkweb.spec: added spec for RPM.  probably doesn't work yet (I won't know
	until I make changes to the Makefiles to make the rpm use RPM_BUILD_ROOT, as
	don't feel like clobbering my installation!).

2001-11-17  Jacob Smullyan  <smulloni@skunk.org>

	* pylibs/AE/Executables.py (executableByTypes): added new mime types.

	* pylibs/AE/mime.types: created new mime types, text/x-stml-include
	and text/x-stml-python-include, for the file extensions inc and pyinc,
	rather than clumping.them together with comp and pycomp.

2001-11-14  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/mime.types: added inc and pyinc extensions.

2001-11-14  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Makefile.in: fix for nasty bug: improper conditional 
	tests (ifeq(@THING@, ' ') rather than ifeq(@THING@,) )

2001-11-11  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/configure.in: use docroot, cache, docsdir, and make 
	more use of standard configure options.

	* SkunkWeb/Services/Makefile.in (inst_services): Now use
	libdir, bindir, and friends, to assist packagers who prefer
	different application layouts.

	* pylibs/Makefile.in (pylibs_dir): use libdir configuration option.

	* configure.in: added --with-docroot, --with-cache, and 
	--with-docsdir options.


2001-11-08  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/mod_skunkweb/modskunkweb_error.html: Removed references 
	to AED.

	* SkunkWeb/.cvsignore: now even more ignorant.

2001-11-06  Jacob Smullyan  <smulloni@smullyan.org>
